--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider:
   connectivity: ^3.0.6
   internet_connection_checker:
+  http: ^1.2.1
 
 
 
@@ -57,7 +58,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/mpn_logo.jpg"
+  image_path: "assets/FD_logo.png"
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -78,7 +79,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/mpn_logo.jpg
+    - assets/FD_logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
